// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert component should render correctly with  1`] = `
<div
  className="sc-bdfBQB cUHgyp"
>
  
   alert
</div>
`;

exports[`Alert component should render correctly with center 1`] = `
<div
  className="sc-bdfBQB cUHgyp"
>
  center
   alert
</div>
`;

exports[`Alert component should render correctly with danger 1`] = `
<div
  className="sc-bdfBQB dBQKfv"
>
  This is a 
  danger
   alert
</div>
`;

exports[`Alert component should render correctly with info 1`] = `
<div
  className="sc-bdfBQB cUHgyp"
>
  This is a 
  info
   alert
</div>
`;

exports[`Alert component should render correctly with left 1`] = `
<div
  className="sc-bdfBQB ezutFJ"
>
  left
   alert
</div>
`;

exports[`Alert component should render correctly with right 1`] = `
<div
  className="sc-bdfBQB hZmUlO"
>
  right
   alert
</div>
`;

exports[`Alert component should render correctly with success 1`] = `
<div
  className="sc-bdfBQB dQPQov"
>
  This is a 
  success
   alert
</div>
`;

exports[`Alert component should render correctly with warning 1`] = `
<div
  className="sc-bdfBQB SBaQe"
>
  This is a 
  warning
   alert
</div>
`;
